design leaderBoard and modify side bar

--- a/public/index.html
+++ b/public/index.html
@@ -3,18 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <base href="/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="./dist/styles/main.css" rel="stylesheet">
-    <title>Document</title>
+    <title>PONG GAME</title>
 </head>
-<body class="bg-gray-200">
-    <!-- <ul style="display: none;">
-        <li><a href="/">Home</a></li>
-        <li><a href="/todos">Todos</a></li>
-        <li><a href="/about">About</a></li>
-        <li><a href="/contact">Contact</a></li>
-    </ul> -->
+<body >
+
     <div id="root">
       
     </div>
